# scroll-service

./: Cargo.toml  Dockerfile  Readme.md  config.toml
.github/workflows/: build-test-deploy.yml
schemas/: openapi.yaml
schemas/database/: 001_init.sql
src/: app.rs  config.rs  lib.rs  main.rs
src/contracts/: abi.rs  mod.rs
src/database/: query.rs  types.rs
src/ethereum/: mod.rs
src/ethereum/write_provider/: inner.rs  mod.rs  openzeppelin.rs  tx_sitter.rs
src/processor/: mod.rs  status.rs
src/server/: data.rs  error.rs  mod.rs
src/task_monitor/: mod.rs
src/task_monitor/tasks/: check_sync.rs  mod.rs  monitor_txs.rs  propagate_root.rs
