[package]
# Please adjust all these values, including the license
name = "scroll-bridge-service"
version = "0.1.0"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
edition = "2021"
build = "build.rs"
homepage = "https://github.com/Recmo/rust-service-template"
repository = "https://github.com/Recmo/rust-service-template"
description = "Template for a Rust CLI tool"
keywords = ["template"]
categories = ["template"]
readme = "Readme.md"
license-file = "mit-license.md"

[features]
default = []
bench = [ "criterion", "proptest" ]
tokio-console = [ "console-subscriber" ]

[[bin]]
name = "rust-app"
path = "src/cli/main.rs"

[[bench]]
name = "criterion"
harness = false
path = "criterion.rs"
required-features = [ "bench", "proptest" ]

[dependencies]
anyhow = { version = "1.0.68" }
async-stream = "0.3.3"
async-trait = "0.1.64"
axum = "0.6.4"
axum-server = "0.4.4"
bytes = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6"
console-subscriber = { version = "0.1", optional = true }
criterion = { version = "0.5", optional = true, features = [ "async_tokio" ] }
config = "0.13.4"
ethers = { version = "2.0.10", features = ["ws", "ipc", "openssl", "abigen"] }
ethers-solc = "2.0.10"
eyre = "0.6"
futures = "0.3"
futures-util = { version = "^0.3" }
hex = "0.4.3"
hex-literal = "0.4.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = { version = "^0.14.17", features = [ "server", "tcp", "http1", "http2" ] }
indoc = "2.0.4"
itertools = "0.10"
mimalloc = { version = "0.1", default-features = false, optional = true }
once_cell = "1.8"
oz-api = { path = "crates/oz-api" }
prometheus = { version = "0.13", features = [ "process" ] }
proptest = { version = "1.0", optional = true }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "^1.6.1", features = [ "serde" ] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.17", features = [ "signal", "macros", "rt", "sync", "time", "rt-multi-thread" ] }
toml = "0.8.8"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "json" ] }
tx-sitter-client = { path = "crates/tx-sitter-client" }
url = { version = "2.2", features = ["serde"] }
users = "0.11"

[dev-dependencies]
dotenv = "0.15.0"
hex = "0.4.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
micro-oz = { path = "crates/micro-oz" }
similar-asserts = "1.5.0"
pretty_assertions = "1.0"
proptest = { version = "1.0" }
regex = { version = "1.7.1", features = ["std"] }
tracing-test = "0.2"

[build-dependencies]
eyre = "0.6"
time = { version = "0.3.5", features = [ "formatting", "parsing" ] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
strip = true
debug = true

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
